--- a/Experiments_Pixart.tex
+++ b/Experiments_Pixart.tex
@@ -9,7 +9,7 @@ This master thesis investigates model pruning techniques, specifically focusing 
 In the following section, individual components of the compression pipeline such as loss function, block selection algorithm, compression strategy, ..., are systematically investigated. To isolate the impact of each component, a default experimental setup is defined below. Unless stated otherwise, all subsequent experiments utilize the baseline configuration. It is important to note that this baseline configuration serves as consistent starting point for the experiments and does not necessarily represent the final, best setting which is derived later in this work. The following elements are constituents of the baseline configurations:
 
 \begin{itemize}
-	\item \textbf{Loss}: The learning objectiv is the sum of the unormalized feature and output distillation loss $\mathcal{L_\text{OutKD}} + \mathcal{L_\text{FeatKD}}$.
+	\item \textbf{Learning Objective}: Knowledge distillation is utilized for retraining the pruned models. Therefore, the learning objectiv is the sum of the unormalized feature and output distillation loss $\mathcal{L_\text{OutKD}} + \mathcal{L_\text{FeatKD}}$.
 	\item \textbf{Pruning Schedule}: The progressive compression strategy was applied. As soon as the \gls{CMMD} value became larger than 0.1 in the block selection algorithm, the model was retrained to recover its generation capbilities.
 		\item \textbf{Structural Compression Strategy}: Complete block removal was used to reduce the model size.
 	\item \textbf{Block Selection Algorithm}: The greedy algorithm based on \gls{CMMD} and \gls{CLIP}-score was utilized, computed on 100 images.
@@ -388,7 +388,7 @@ In this section the standard setting (see sec. \ref{sec:DefaultSetup}) except th
  As an alternative to the pruning strategy of removing entire transformer blocks from PixArt-$\Sigma$, a compression strategy utilizing \gls{SVD} compression is investigated. This decomposition is applied to the \gls{MLP}, self-attention and cross-attention matrices within a transformer block. To evaluate the efficiency of the \gls{SVD} compression method against the structural block removal method, a representative operating point is chosen. The rank for the \gls{MLP} is set to $r_\text{MLP} = 512$ corresponding to a compression of approximately $44\%$ of its parameters and the ranks for the self- and cross-attention matrices are fixed to $r_\text{self-attn} = r_\text{cross-attn} = 128$ representing a parameter reduction of approximately $78\%$. This serves as a starting point. Later, the choice of compressing attention matrices more aggressively than the \gls{MLP} matrices is further investigated (see sec. \ref{sec:MLPAttnDiffCompRatios}). \\
   Tab. \ref{tab:SVDCompressionFirstExp} compares the configurations of both methods, specifically the number of blocks removed or compressed and corresponding training duration for each model. Note that the number of training steps differs significantly, as the default criterion - a \gls{CMMD} value exceeding 0.1 - was employed to the pruning rate per iteration, consistent with the default settings. The observation that the \gls{SVD} allows for more parameters to be removed with a less severe impact on the \gls{CMMD} value on the small reference dataset is an initial indication that compression is a more nuanced method than block removal. Fig. \ref{fig:SVD_vs_Removal} presents the performance for both methods on the HPSv2 and GenEval benchmarks. For both benchmarks the \gls{SVD} compression method outperforms the complete block removal method in low and high compression regimes. This suggests that distributing the parameter reduction across multiple blocks via compression is less adverse to model performance compared to removing individual blocks completely. \\\\
   For a qualitative comparison of both methods, Fig. \ref{fig:Example_Images_SVD_vs_Removal} provides a set of example images for compression ratios ranging from 90\% to 50\%. The advantage of the \gls{SVD} compression method becomes particularly evident in the high-compression regimes (60\% and 50\% compression ratios). Its images contain more details, exhibit fewer artefacts and are more closely resembel to the original image. Specifically, column two demonstrates that the woman's face is accurately preserved up to 60\% compression ratio when applying the \gls{SVD} compression technique. Moreover, column one shows that in high-compression regimes, complete block removal can lead to severe deviations compared to the original image, in contrast to the \gls{SVD} compression technique. Additionally, column five reveals that the images generated via complete block removal exhibit reduced sharpness and the plants seem to be blurry compared to those produced by \gls{SVD} compression.\\
-   Interestingly, at a 90\% compression ratio, the \gls{SVD} compression technique leads to a valid but semantically altered image in column one, where the man's head is replaced by that of an alien. However, at different compression stages the model recovers and correctly generates a human head again. 
+   Interestingly, at a 90\% and 80\% compression ratio, the \gls{SVD} compression technique leads to a valid but semantically altered image in column one, where the man's head is replaced by that of an alien. However, at different compression stages the model recovers and correctly generates a human head again. 
   In conclusion, the qualitative results confirm the quantitative results of the benchmarks and demonstrate a clear advantage of \gls{SVD} compression over entire block removal.
  
  \begin{table}[htbp]
@@ -496,7 +496,7 @@ The scores in fig. \ref{fig:DistributionCompressionRatios} reveal two distinct t
 
  
  \subsection{SVD Compression Scheduling}
-In previous experiments, SVD compression was applied to each block at most once. However, restricting compression to untouched blocks may be suboptimal and incrementally reducing the size of an already compressed block could potentially preserve model performance better than pruning a dense block. For this reason, the linear progressive compression scheme defined in sec. \ref{sec:LinearProgressiveCompression} is investigated. Assuming that a fixed number of parameters should be removed per iteration, a desgin choice is how to distribute them across the model. One can either compress many blocks slightly or compress a few blocks heavily. To investigate which works better, the linear progressive compression scheme is performed for four different cases where the number of compressed blocks per iteration differs:
+In previous experiments, SVD compression was applied to each block at most once. However, restricting compression to untouched blocks may be suboptimal Incrementally reducing the size of an already compressed block could potentially preserve model performance better than pruning a dense block. For this reason, the linear progressive compression scheme defined in sec. \ref{sec:LinearProgressiveCompression} is investigated. Assuming that a fixed number of parameters should be removed per iteration, a desgin choice is how to distribute them across the model. One can either compress many blocks slightly or compress a few blocks heavily. To investigate which works better, the linear progressive compression scheme is performed for four different cases where the number of compressed blocks per iteration differs:
 \begin{itemize}
 	\item \textbf{SVD\_7}: Seven blocks are compressed per iteration.
 	\item \textbf{SVD\_14}: Fourteen blocks are compressed per iteration.
