--- a/glossary.tex
+++ b/glossary.tex
@@ -69,6 +69,12 @@
 	description={Post-Training Quantization}
 }
 
+\newglossaryentry{GenAI}
+{
+	name=GenAI,
+	description={Generative Artificial Intelligence}
+}
+
 \newglossaryentry{MoE}
 {
 	name=MoE,
